--- a/sycl/CMakeLists.txt
+++ b/sycl/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.22)
 project(Tesi_sycl)
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/sycl)
 # list exe
-set(EXECUTABLES nbody vector_add matrix_transpose matrix_mul_tiling)
+set(EXECUTABLES nbody vector_add matrix_transpose matrix_mul_tiling reduction_subgroup)
 
 foreach(EXE IN LISTS EXECUTABLES)
 	add_executable(${EXE})
