--- a/sycl/CMakeLists.txt
+++ b/sycl/CMakeLists.txt
@@ -1,9 +1,10 @@
 
 cmake_minimum_required(VERSION 3.22)
 project(Tesi_sycl)
+set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/sycl)
 # list exe
-set(EXECUTABLES nbody vector_add matrix_transpose matrix_mul_tiling reduction_subgroup)
+set(EXECUTABLES nbody vector_add matrix_transpose matrix_mul_tiling reduction_subgroup reduction_reduce_over_group)
 
 foreach(EXE IN LISTS EXECUTABLES)
 	add_executable(${EXE} ${CMAKE_CURRENT_SOURCE_DIR}/include/time_ms.hpp)
