Added compile definitions matrix transpose

--- a/sycl/CMakeLists.txt
+++ b/sycl/CMakeLists.txt
@@ -47,6 +47,7 @@ add_executable(sobel_filter ${CMAKE_CURRENT_SOURCE_DIR}/src/sobel_filter_sycl.cp
 # target_compile_definitions(nbody PRIVATE SIZE_BODY=15104)
 add_compile_definitions(MATRIX_SIZE=2048 
 						SIZE_BODY=15104 
+						SIZE_X= 8192 SIZE_Y= 8192 #matrix_transpose sizes
 						SIZE_REDUCTION=61440
 						RADIUS=5)
 
